Added new content

--- a/450/index.html
+++ b/450/index.html
@@ -1,5 +1,5 @@
 ---
-date: 2022-04-22
+date: 2022-04-25
 layout: 450
 permalink: /450
 ---
@@ -181,6 +181,21 @@ permalink: /450
 </details>
 
 <details>
+<summary>Excerpts from Harrow School Drama</summary>
+<p><ul>
+<li>A scene from The Importance of Being Earnest – Tobias and Ben</li>
+<li>A scene from The Tempest – Freddie, Ben and Rowland</li>
+<li>Moreton’s entry to the House Scenes Competition – Victor, Rory, Valentine, Freddie, Max and Tom</li>
+<li>A selection of Speech Day readings – Max</li>
+<li>A duologue by the L6 A-Level actors – Rowland and Omar</li>
+<li>Two scenes from Chariots of Fire – Ben, Max, Theo, Matt, Maxi and Omar</li>
+<li>A performance from the Fifth Form GCSE actors – Jasper and Jack</li>
+</ul></p>
+<p>🕓 2pm, 4pm, 5pm</p>
+<p>📍 Behind the Vaughan Library</p>
+</details>
+
+<details>
 <summary>Fives</summary>
 <p>On the main fives courts, initial celebrations will start with an exciting exhibition match between the top seeded players in the school. On the others courts, highly qualified coaches and some senior boys will run a taster session for all those who wish to trial the game. The afternoon will then conclude with a festival style tournament between the Harrow boys and some community players.</p>
 <p>🕓 2pm – 4pm</p>
@@ -224,7 +239,7 @@ permalink: /450
 <summary>Indie Choir</summary>
 <p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
 <p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
-<p>🕓 2.45pm, 4.15pm, 5.30pm</p>
+<p>🕓 2.45pm-3.15pm, 4.15pm-4.45pm, 5.30pm-6pm</p>
 <p>📍 Roof Terrace behind Medical Centre</p>
 </details>
 
@@ -312,6 +327,14 @@ permalink: /450
 </details>
 
 <details>
+<summary>Romanian Choir</summary>
+<img src="/450/Romanian Choir.jpeg" width=100% height=auto>
+<p>Gloryah London Choir was founded in 1998, performing regularly in Romanian Bethlem church and occasionally abroad, in Ireland, Romania, Italy, Ukraine, and Moldova. Our commitment is to honour God Almighty through old and new hymns in English and Romanian, bringing joy and excitement to people of all kinds of culture and nationalities. Our main conductor, Simon Boloca, is a multi-talented musician and composer who brings the choir to a very high musical standard.</p>
+<p>🕓 4.15pm and 5.15pm</p>
+<p>📍 Chapel Terrace</p>
+</details>
+
+<details>
 <summary>Roystonjax</summary>
 <p>RoystonJax are a trio with a difference. They use stripped down to bass/drum backing tracks and play live guitars with fabulous three-part harmonies. It feels like a full band but one that can play at any volume in any venue!</p>
 <p>🕓 3.15pm, 5.30pm</p>
@@ -348,7 +371,7 @@ permalink: /450
 <details>
 <summary>Tai Chi</summary>
 <p>We are a community tai chi group called Harrow Tai Chi for Health. We offer free tai chi sessions at Harrow Recreation Ground every Friday 9.30 to 10.30am for health and general well-being. For more information please email <a href="mailto:info@harrowrec.org.uk">info@harrowrec.org.uk</a></p>
-<p>🕓 2pm – 6pm</p>
+<p>🕓 2pm – 3pm</p>
 <p>📍 Bill Yard</p>
 </details>
 
