--- a/450/index.html
+++ b/450/index.html
@@ -1,5 +1,5 @@
 ---
-date: 2022-04-25
+date: 2022-04-26
 layout: 450
 permalink: /450
 ---
@@ -141,6 +141,22 @@ permalink: /450
 </details>
 
 <details>
+<summary>Behind the Vaughan</summary>
+<p>Excerpts from Harrow School Drama
+<ul>
+<li>A scene from The Importance of Being Earnest – Tobias and Ben</li>
+<li>A scene from The Tempest – Freddie, Ben and Rowland</li>
+<li>Moreton’s entry to the House Scenes Competition – Victor, Rory, Valentine, Freddie, Max and Tom</li>
+<li>A selection of Speech Day readings – Max</li>
+<li>A duologue by the L6 A-Level actors – Rowland and Omar</li>
+<li>Two scenes from Chariots of Fire – Ben, Max, Theo, Matt, Maxi and Omar</li>
+<li>A performance from the Fifth Form GCSE actors – Jasper and Jack</li>
+</ul></p>
+<p>🕓 2pm, 4pm, 5pm</p>
+<p>📍 Vaughan Library</p>
+</details>
+
+<details>
 <summary>Bollywood Dance by Quainton Hall</summary>
 <p>🕓 3.15pm – 3.45pm</p>
 <p>📍 Outside Vaughan Library</p>
@@ -180,20 +196,6 @@ permalink: /450
 <p>📍 The Park Driveway</p>
 </details>
 
-<details>
-<summary>Excerpts from Harrow School Drama</summary>
-<p><ul>
-<li>A scene from The Importance of Being Earnest – Tobias and Ben</li>
-<li>A scene from The Tempest – Freddie, Ben and Rowland</li>
-<li>Moreton’s entry to the House Scenes Competition – Victor, Rory, Valentine, Freddie, Max and Tom</li>
-<li>A selection of Speech Day readings – Max</li>
-<li>A duologue by the L6 A-Level actors – Rowland and Omar</li>
-<li>Two scenes from Chariots of Fire – Ben, Max, Theo, Matt, Maxi and Omar</li>
-<li>A performance from the Fifth Form GCSE actors – Jasper and Jack</li>
-</ul></p>
-<p>🕓 2pm, 4pm, 5pm</p>
-<p>📍 Behind the Vaughan Library</p>
-</details>
 
 <details>
 <summary>Fives</summary>
@@ -343,7 +345,7 @@ permalink: /450
 
 <details>
 <summary>Squash</summary>
-<p> A sport invented at Harrow School, this squash event will feature exhibition matches between the School’s first and second seed (former number 1 in Asia U16 and current top 40 U18 UK), and members of the Harrow Leisure Centre Squash Club. On the second glass back court, the captain and vice captain (Ilyas Qureshi and Hanno Sie) will offer a taster session and training for all that wish to come and take part.</p>
+<p> A sport invented at Harrow School, this squash event will feature exhibition matches between the School’s first and second seed (former number 1 in Asia U16 and current top 40 U18 UK), and members of the Harrow Leisure Centre Squash Club. On the second glass back court, the captain and vice captain (Ilyas and Hanno) will offer a taster session and training for all that wish to come and take part.</p>
 <p>🕓 1pm – 4pm</p>
 <p>📍 Hundred Steps</p>
 </details>
@@ -357,7 +359,7 @@ permalink: /450
 
 <details>
 <summary>St Mary's Church</summary>
-<p>After listening to the bellringing opening the Community Day why not climb the tower and go onto the flat roof (weather permitting) to see the stunning views of the Hill and London.  Come and meet Elizabeth I and John Lyon, who founded the School and other characters in costume who will tell you some of the history of the School and church. Visit the church where boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Percival and authors Lord Byron, Sheridan, and Anthony Trollope. Go on our churchyard trail or have a cuppa at our Spire Cafe.</p>
+<p>After listening to the bell-ringing opening the Community Day, why not climb the tower and go onto the roof (weather permitting) to see the stunning views of the Hill and London? Come and meet Elizabeth I and John Lyon, who founded the School, and other characters in costume (including the apothecary, Thomas Graham, in his Apothecary's shop) who will tell you some of the history of the School and church. Visit the church where Harrow boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Perceval, the poet, Lord Byron, playwrite, Sheridan, and novelist, Anthony Trollope. Go on our "Monumental Connections" tour at 12 noon, visit the tomb of the oldest resident of the Hill - our Saxon lady, discover our churchyard nature trail or have a cuppa and a homemade scone at our Spire Cafe (open 11am - 6pm). All are very welcome.</p>
 <p>🕓 2pm – 6pm</p>
 <p>📍 St Mary's Church</p>
 </details>
@@ -386,7 +388,7 @@ permalink: /450
 </details>
 
 <details>
-<summary>Veteran Cars</summary>
+<summary>Vintage and Veteran Cars</summary>
 <p>🕓 2pm – 6pm</p>
 <p>📍 Outside the Old King's Head</p>
 </details>
