--- a/450-test/index.html
+++ b/450-test/index.html
@@ -22,9 +22,6 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
     integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
     crossorigin="" />
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
 
   <!-- Import vue-->
   <!-- development version, includes helpful console warnings -->
@@ -32,21 +29,17 @@
   <!-- production version, optimized for size and speed -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
 
-  <!-- Import Bootstrap 5 -->
+  <!-- Import Bootstrap 5 stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
 
-  <!-- Import Axios-->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"
-    integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <!-- Link Glass Octopus stylesheet -->
+  <link href="./libraries/glass-octopus/glassoct.css" rel="stylesheet">
+
 
 </head>
 
-<body>
+<bodys>
 
   <div class="col-lg-5 mx-auto p-3 pt-md-5">
     <header class="d-flex align-items-center pb-3 mb-3">
@@ -55,6 +48,7 @@
 
     <main id="app">
       <section>
+
         <h3 class="pink"><b>Celebrating 450 years of community on the Hill</b></h3>
         <h3 class="turquoise">30 April Noon – 6pm</h3>
 
@@ -70,12 +64,17 @@
         <details :id="'event'+event.id" v-for="event in events" v-if="event.classification == 'Food' ">
           <summary>{{event.title}}</summary>
           <span v-html="event.body"></span>
-          <p>🕓 {{event.times}}</p>
 
+          <p>
+            <button type="button" class="btn btn-secondary disabled btn-sm pl-2" data-bs-toggle="modal"
+              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">
+              🕓 {{event.times}}</button>
+          </p>
 
-          <p>📍 {{locations[event.location].title}}
+          <p>
             <button type="button" class="btn btn-danger btn-sm pl-2" data-bs-toggle="modal"
-              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">Find</button>
+              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">📍
+              {{locations[event.location].title}}</button>
           </p>
 
           <!-- Button trigger modal -->
@@ -88,12 +87,16 @@
         <details v-for="event in events" v-if="event.classification == 'Event' ">
           <summary>{{event.title}}</summary>
           <span v-html="event.body"></span>
-          <p>🕓 {{event.times}}</p>
+          <p>
+            <button type="button" class="btn btn-secondary disabled btn-sm pl-2" data-bs-toggle="modal"
+              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">
+              🕓 {{event.times}}</button>
+          </p>
 
-
-          <p>📍 {{locations[event.location].title}}
+          <p>
             <button type="button" class="btn btn-danger btn-sm pl-2" data-bs-toggle="modal"
-              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">Find</button>
+              :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">📍
+              {{locations[event.location].title}}</button>
           </p>
 
           <!-- Button trigger modal -->
@@ -195,6 +198,7 @@
 
       </section>
 
+
       <!-- Modal -->
       <div v-for="(location, id) in locations" class="modal fade" :id="'locationModal'+id" tabindex="-1"
         aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -206,6 +210,8 @@
             </div>
             <div class="modal-body">
               <div :id="'mainMap'+id" class="modalmap"></div>
+              <hr>
+              <div :id="'inject'+id"></div>
               <hr>
 
               <h3>On at {{location.title}}</h3>
@@ -226,9 +232,6 @@
 
                 </tbody>
               </table>
-
-
-
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -238,13 +241,34 @@
       </div>
     </main>
 
-    <script src="./index.js"></script>
+
 
     <footer class="pt-5 my-5 text-muted border-top">
       &copy; Harrow School 2022
     </footer>
   </div>
 
-</body>
+  <!-- Import Glassoct js-->
+  <script src="./libraries/glass-octopus/glassoct.js"></script>
+
+  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+    crossorigin=""></script>
+
+  <!-- import bootstrap JS-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+
+  <!-- Import Axios js-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.26.1/axios.min.js"
+    integrity="sha512-bPh3uwgU5qEMipS/VOmRqynnMXGGSRv+72H/N260MQeXZIK4PG48401Bsby9Nq5P5fz7hy5UGNmC/W1Z51h2GQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+  <!-- Custom Vue stuffs-->
+  <script src="./index.js"></script>
+
+
+  </body>
 
 </html>
