Changes to test page

--- a/450-test/index.html
+++ b/450-test/index.html
@@ -11,7 +11,11 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
+
+
 <h1 class="purple">Food Noon to 6pm</h1>
+
+<p>Tap each item for more information.</p>
 
 <details>
 <summary>Food Market</summary>
@@ -31,14 +35,24 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <li>Ben’s Bakery (Artisan Cakes)</li>
 </ul></p>
 <p>🕓 noon – 6pm</p>
-<p>📍 High Street</p>
+
+<div id="1">
+<p>📍 High Street <button onclick="toggleMap('1', 'high_street')">Show Map</button></p>
+<canvas style="display: none"></canvas>
+</div>
+
 </details>
 
 <details>
 <summary>Free Range Jane</summary>
 <p>Free Range Jane specialises in luxury free-range fried chicken burgers and hand cut chips. We make all our sauces in house and conscientiously source our free-range chicken from a small butcher in Wiltshire. We will be in situ on Grove Hill next to Miriam's Munchies, and will be serving delicious free-range fried chicken all afternoon.</p>
 <p>🕓 noon – 6pm</p>
-<p>📍 Grove Hill</p>
+
+<div id="2">
+<p>📍 Grove Hill <button onclick="toggleMap('2', 'grove_hill')">Show Map</button></p>
+<canvas style="display: none"></canvas>
+</div>
+
 </details>
 
 <details>
@@ -49,13 +63,35 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
+<summary>The Pie Stall</summary>
+<p>We will be selling delicious pies from across the centuries, both savoury and sweet. Come and select a filling of your choice! Proceeds from sales will be donated to Paws for Cause.</p>
+<p>🕓 noon – 6pm</p>
+<p>📍 Bill Yard</p>
+</details>
+
+<details>
+<summary>Spire Cafe</summary>
+<p><ul>
+<li>Homemade soup and fresh rolls</li>
+<li>Hot filled rolls</li>
+<li>Cream teas featuring Spire Cafe's famous scones, fresh from the oven</li>
+<li>Home-baked cakes</li>
+<li>Fairtrade teas and coffees</li>
+<li>Cold drinks including our homemade mango lassi</li>
+</ul></p>
+<p>For updates, find us <a href="https://tinyurl.com/spirecafeharrow">on the web</a> and <a href="https://twitter.com/SpireCafe">on Twitter @SpireCafe.</a></p>
+<p>🕓 noon – 6pm</p>
+<p>📍 St Mary's Church</p>
+</details>
+
+<details>
 <summary>WI Cake Stall</summary>
 <p>A selection of wonderful home-made cakes for sale.</p>
 <p>🕓 noon – 6pm</p>
 <p>📍 Opposite Druries</p>
 </details>
 
-<h1 class="orange">Events 2pm – 6pm</h1>
+<h1 class="green">Events 2pm – 6pm</h1>
 
 <p>Tap each item for more information.</p>
 
@@ -76,14 +112,28 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <details>
 <summary>Art, Photography and Sculpture Exhibitions</summary>
 <p>Work by local schools and adult art groups</p>
+<p>See here for more information on how to enter the <a href="/450/Photography Competition Poster.pdf">photography competition</a> or the <a href="/450/Harrow Community Art Exhibition.pdf">art exhibition</a>.
 <p>🕓 2pm – 6pm</p>
 <p>📍 Pasmore Gallery and Grove Hill</p>
 </details>
 
 <details>
 <summary>Art Workshop</summary>
+<p><strong>Queen Elizabeth I and John Lyon Figures</strong></p>
+<p>Our two prestigious life-size figures need your help to decorate them and make them look as glorious as possible! Just drop by, and spend as long or as little as you like.</p>
+<p><strong>Stained-Glass Windows</strong></p>
+<p>Inspired by the John Lyon window, decorate your own historical window to take home and make your windows glow!</p>
+<p><strong>Victorian Photographic Studio</strong></p>
+<p>Thinking of Harrow School in Victorian times, and create your own photo studio... with a difference!</p>
 <p>🕓 2pm – 6pm</p>
 <p>📍 Outside Druries</p>
+</details>
+
+<details>
+<summary>Athletics</summary>
+<p>Harrow School and Harrow Athletics Club will combine to compete in an afternoon of athletics. This festival will see 48 Harrow athletes compete against Harrow AC in a refined range of events, highlighting the key disciplines within the sport and strengthening the connection between the school and local community.</p>
+<p>🕓 2.15pm – 4.45pm</p>
+<p>📍 Athletics Ground</p>
 </details>
 
 <details>
@@ -93,9 +143,26 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
-<summary>Basketball Competition</summary>
-<p>🕓 2pm – 6pm</p>
+<summary>Basketball</summary>
+<p>Harrow school and the local community Basketball clubs will play a 3 vs 3 competition in the Harrow school sports hall, culminating in a final between the top two teams. Following this, Harrow schools current senior first team will play a recent leavers OH team in an exciting exhibition match.</p>
+<p>🕓 2pm – 4.30pm</p>
 <p>📍 Sports Hall</p>
+</details>
+
+<details>
+<summary>Behind the Vaughan</summary>
+<p>Excerpts from Harrow School Drama
+<ul>
+<li>A scene from The Importance of Being Earnest – Tobias and Ben</li>
+<li>A scene from The Tempest – Freddie, Ben and Rowland</li>
+<li>Moreton’s entry to the House Scenes Competition – Victor, Rory, Valentine, Freddie, Max and Tom</li>
+<li>A selection of Speech Day readings – Max</li>
+<li>A duologue by the L6 A-Level actors – Rowland and Omar</li>
+<li>Two scenes from Chariots of Fire – Ben, Max, Theo, Matt, Maxi and Omar</li>
+<li>A performance from the Fifth Form GCSE actors – Jasper and Jack</li>
+</ul></p>
+<p>🕓 2pm, 4pm, 5pm</p>
+<p>📍 Vaughan Library</p>
 </details>
 
 <details>
@@ -114,15 +181,8 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <summary>Community Production: Noye's Fludde</summary>
 <p>A flood is coming, but Noah is building a boat, in the hope that a new world will be waiting on the other side.</p>
 <p>As part of Harrow School's Community Day, members of the Drama and Music departments direct a joyous new production of Benjamin Britten's community opera, combining the talents of more than a hundred children from four primary schools: Byron Court, Norbury, St Anselm's and St Jerome's from across the borough, and Bishopshalt School.</p>
-<p>🕓 2pm, 5pm</p>
+<p>🕓 2pm and 5pm</p>
 <p>📍 Speech Room</p>
-</details>
-
-<details>
-<summary>Costume-themed Streets</summary>
-<p>Victorian West Street, Edwardian High Street, Elizabethan Old Schools, and the Church. With many thanks to the members of the Harrow on the Hill Women's Institute for the more than 600m of wonderful handmade bunting and to the boys of Harrow School for all the flags.</p>
-<p>🕓 2pm – 6pm</p>
-<p>📍 West Street, High Street, Old Schools, St Mary's</p>
 </details>
 
 <details>
@@ -133,18 +193,25 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
-<summary>Edwardian Harrow Beak Reads Virgil</summary>
-<p>🕓 2.40pm – 3pm</p>
-<p>📍 The Park Drive</p>
+<summary>Decorated Streets</summary>
+<p>Victorian West Street, Edwardian High Street, Elizabethan Old Schools, and the Church. With many thanks to the members of the Harrow on the Hill Women's Institute for the more than 600m of wonderful handmade bunting and to the boys of Harrow School for all the flags.</p>
+<p>🕓 2pm – 6pm</p>
+<p>📍 West Street, High Street, Old Schools, St Mary's</p>
 </details>
 
 <details>
-<summary>Exhibition of Traditional Games</summary>
-<p>Including Squash – which was invented at Harrow – Fives, Rackets, Judo and Archery</p>
-<p>🕓 2pm – 6pm</p>
-<p>📍 Sports Hall</p>
+<summary>Edwardian Harrow Beak Reads Virgil</summary>
+<p>🕓 2.40pm – 3pm</p>
+<p>📍 The Park Driveway</p>
 </details>
 
+
+<details>
+<summary>Fives</summary>
+<p>On the main fives courts, initial celebrations will start with an exciting exhibition match between the top seeded players in the school. On the others courts, highly qualified coaches and some senior boys will run a taster session for all those who wish to trial the game. The afternoon will then conclude with a festival style tournament between the Harrow boys and some community players.</p>
+<p>🕓 2pm – 4pm</p>
+<p>📍 Hundred Steps</p>
+</details>
 
 <details>
 <summary>Harrow Community Gospel Choir</summary>
@@ -168,7 +235,7 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <p>We are very proud of our Alumni, many of whom still perform and help voluntarily within the band, our trustees include ex band members and their parents. Others have gone on to be teachers, leaders of arts organisations and practising musicians.</p> <p>Our funders include: John Lyon's Charity, Harrow Giving, and the Young Harrow Foundation.</p> 
 <p>Please get in touch for further info: <a href="mailto:bandmanager@harrowsteel.org.uk">bandmanager@harrowsteel.org.uk</a></p>
 <p>🕓 2pm, 3.45pm, 5pm</p>
-<p>📍 Roof Terrace</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
 </details>
 
 <details>
@@ -183,14 +250,22 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 <summary>Indie Choir</summary>
 <p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
 <p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
-<p>🕓 2.45pm, 4.15pm, 5.30pm</p>
-<p>📍 Roof Terrace</p>
+<p>🕓 2.45pm-3.15pm, 4.15pm-4.45pm, 5.30pm-6pm</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
 </details>
 
 <details>
 <summary>John Lyon School Drama</summary>
+<p>A showcase of material from John Lyon’s upcoming modern interpretation of Shakespeare’s The Tempest, adapted for the Harrow and Hill Community Day.</p>
 <p>🕓 2pm – 2.30pm</p>
-<p>📍 The Park Drive</p>
+<p>📍 The Park Driveway</p>
+</details>
+
+<details>
+<summary>Judo</summary>
+<p>The judo celebrations will begin with an exhibition training session at 2pm. Boys will demonstrate the main elements of judo training, including traditional warm-up and agility exercises, breakfalls, uchi-komi (technical drills) for standing and groundwork, contest technique, and randori (sparring). The session will conclude with some inter-house exhibition contests. At 3:30pm there will then be an expert demonstration of Nage-no-kata, which is one of the main katas (formal demonstrations) of Kodokan Judo. It is intended as an illustration of the various concepts of throwing that exist in judo and is used both as a training method and as a demonstration of understanding. From 4-5pm there will be a taster session for anyone who would like to try judo.</p>
+<p>🕓 2pm – 5pm</p>
+<p>📍 Hundred Steps</p>
 </details>
 
 <details>
@@ -249,6 +324,13 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
+<summary>Rackets</summary>
+<p>On the main rackets court there will be an exciting exhibition match between the top seeded players in the school. On the second court, highly qualified coaches will run a taster session for all those who wish to trial the game and gain experience of the pace of the ball and play. All are welcome and kit and equipment will be provided.</p>
+<p>🕓 2.15pm – 4.30pm</p>
+<p>📍 Hundred Steps</p>
+</details>
+
+<details>
 <summary>Rayleigh Observatory</summary>
 <p>Find out about the observation of planets, galaxies and other astronomical phenomena.</p>
 <p>🕓 2pm – 6pm</p>
@@ -256,45 +338,51 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
-<summary>Roystonjax</summary>
-<p>RoystonJax are a trio with a difference. They use stripped down to bass/drum backing tracks and play live guitars with fabulous three-part harmonies. It feels like a full band but one that can play at any volume in any venue!</p>
-<p>🕓 3.15pm, 5.30pm</p>
-<p>📍 Roof Terrace</p>
+<summary>Romanian Choir</summary>
+<img src="/450/Romanian Choir.jpeg" width=100% height=auto>
+<p>Gloryah London Choir was founded in 1998, performing regularly in Romanian Bethlem church and occasionally abroad, in Ireland, Romania, Italy, Ukraine, and Moldova. Our commitment is to honour God Almighty through old and new hymns in English and Romanian, bringing joy and excitement to people of all kinds of culture and nationalities. Our main conductor, Simon Boloca, is a multi-talented musician and composer who brings the choir to a very high musical standard.</p>
+<p>🕓 4.15pm and 5.15pm</p>
+<p>📍 Chapel Terrace</p>
 </details>
 
 <details>
-<summary>Stagecoach Irish Dance Group</summary>
+<summary>Roystonjax</summary>
+<p>RoystonJax are a trio with a difference. They use stripped down to bass/drum backing tracks and play live guitars with fabulous three-part harmonies. It feels like a full band but one that can play at any volume in any venue!</p>
+<p>🕓 3.15pm, 5.30pm</p>
+<p>📍 Roof Terrace behind Medical Centre</p>
+</details>
+
+<details>
+<summary>Squash</summary>
+<p> A sport invented at Harrow School, this squash event will feature exhibition matches between the School’s first and second seed (former number 1 in Asia U16 and current top 40 U18 UK), and members of the Harrow Leisure Centre Squash Club. On the second glass back court, the captain and vice captain (Ilyas and Hanno) will offer a taster session and training for all that wish to come and take part.</p>
+<p>🕓 1pm – 4pm</p>
+<p>📍 Hundred Steps</p>
+</details>
+
+<details>
+<summary>Stagecoach Harrow</summary>
 <p>Stagecoach Harrow is in its 29th Year and was one of the first Stagecoach schools to open based at Rooks Heath College. Emmy Hamilton has been Principal for 15 of those years and is proud to be at the head of this energetic and creative Performing Arts School in the borough. At this event are dedicated students from Stagecoach Harrow's Dance Troupe (performing some street and musical theatre) and our 15+ year group 'Further Stages' who will be performing some of their Performance Arts Awards Exam work, based on life in 1940s. There are two other Stagecoach centres in the borough: Stagecoach Harrow on the Hill and Stagecoach Harrow Weald, all three providing quality, nurturing environments in part time performing arts lessons for our students to thrive in, from 4-19 years, with lots of opportunities for students to be themselves, develop skills and confidence, make new friends, and have a chance to shine. Professional work and West End opportunities along with added value in LAMDA lessons are also available. Enquire at <a href="https://www.stagecoach.co.uk/harrow">www.stagecoach.co.uk/harrow</a> 0203 5040100.</p>
 <p>🕓 2.15pm, 3.45pm</p>
 <p>📍 War Memorial Building Forecourt</p>
 </details>
 
 <details>
-<summary>St Mary's and Spire Cafe</summary>
-<p>After listening to the bellringing opening the Community Day why not climb the tower and go onto the flat roof (weather permitting) to see the stunning views of the Hill and London.  Come and meet Elizabeth I and John Lyon, who founded the School and other characters in costume who will tell you some of the history of the School and church. Visit the church where boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Percival and authors Lord Byron, Sheridan, and Anthony Trollope. Go on our churchyard trail or have a cuppa at our Spire Cafe.</p>
-<p><ul>
-<li>Homemade soup and fresh rolls</li>
-<li>Hot filled rolls</li>
-<li>Cream teas featuring Spire Cafe's famous scones, fresh from the oven</li>
-<li>Home-baked cakes</li>
-<li>Fairtrade teas and coffees</li>
-<li>Cold drinks including our homemade mango lassi</li>
-</ul></p>
-<p>For updates, find us <a href="https://tinyurl.com/spirecafeharrow">on the web<a> and <a href="https://twitter.com/SpireCafe">on Twitter @SpireCafe.</a></p>
+<summary>St Mary's Church</summary>
+<p>After listening to the bell-ringing opening the Community Day, why not climb the tower and go onto the roof (weather permitting) to see the stunning views of the Hill and London? Come and meet Elizabeth I and John Lyon, who founded the School, and other characters in costume (including the apothecary, Thomas Graham, in his Apothecary's shop) who will tell you some of the history of the School and church. Visit the church where Harrow boys worshipped before the chapel was built, including prime ministers Robert Peel and Spencer Perceval, the poet, Lord Byron, playwrite, Sheridan, and novelist, Anthony Trollope. Go on our "Monumental Connections" tour at 12 noon, visit the tomb of the oldest resident of the Hill - our Saxon lady, discover our churchyard nature trail or have a cuppa and a homemade scone at our Spire Cafe (open 11am - 6pm). All are very welcome.</p>
 <p>🕓 2pm – 6pm</p>
-<p>📍 St Mary's</p>
+<p>📍 St Mary's Church</p>
 </details>
 
 <details>
 <summary>String Quartet and Brass Trio</summary>
 <p>🕓 3.30pm – 4.30pm</p>
-<p>📍 The Park Drive</p>
+<p>📍 The Park Driveway</p>
 </details>
 
 <details>
 <summary>Tai Chi</summary>
 <p>We are a community tai chi group called Harrow Tai Chi for Health. We offer free tai chi sessions at Harrow Recreation Ground every Friday 9.30 to 10.30am for health and general well-being. For more information please email <a href="mailto:info@harrowrec.org.uk">info@harrowrec.org.uk</a></p>
-<p>🕓 2pm – 6pm</p>
+<p>🕓 2pm – 3pm</p>
 <p>📍 Bill Yard</p>
 </details>
 
@@ -309,14 +397,12 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 </details>
 
 <details>
-<summary>Veteran Cars</summary>
+<summary>Vintage and Veteran Cars</summary>
 <p>🕓 2pm – 6pm</p>
 <p>📍 Outside the Old King's Head</p>
 </details>
 
-
-
-<h1 class="green">Road Closures</h1>
+<h1 class="orange">Road Closures</h1>
 <img src="/450/road_closures.png">
 <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 
@@ -332,16 +418,21 @@ permalink: /9352bf42-1abb-496d-a594-4533a3a6a63e
 
 <h1 class="pink">Other Information</h1>
 
-<p><strong>First Aid and Lost Children</strong></p>
-<p>St John’s ambulance will be working from the West St Meeting Room at the top of West St.  This will also be the location to which lost children should be taken.</p>	
+<p><strong>First Aid and Lost Children</strong><br/>
+St John’s ambulance will be working from the West St Meeting Room at the top of West St.  This will also be the location to which lost children should be taken.</p>	
  
-<p><strong>Security</strong></p>
-<p>Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
+<p><strong>Security</strong><br/>
+Harrow School Security can be contacted via 0208 872 8345 and 07766 688597.</p>
 
-<h1 class="orange">Map (BETA)</h1>
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin="" />
-<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
+<p><strong>Picnic Places</strong><br/>
+You are welcome to picnic in the gardens below the Chapel Terrace, on the Roof Terrace behind the Medical Centre and on The Green by the Band Stand.</p>
+ 
+<p><strong>Toilets</strong><br/>
+Porta Loos can be found in Grove Hill and Harrow Park.</p>
 
-<div id="map"></div>		
-
-<script src="/450-test/map.js"></script>
+<script src="/450-test/map.js" type="text/javascript"></script>
+<img id="map" src="/450-test/450_map.jpg" style="display: none" />
+<img id="hand_right" src="/450-test/hand_right.png" style="display: none" />
+<img id="hand_right_down" src="/450-test/hand_right_down.png" style="display: none" />
+<img id="hand_left" src="/450-test/hand_left.png" style="display: none" />
+<img id="hand_left_down" src="/450-test/hand_left_down.png" style="display: none" />
