--- a/450/test_map.html
+++ b/450/test_map.html
@@ -9,5 +9,5 @@ layout: 450
 <p id="x_string">x: 0<p>
 <p id="y_string">y: 0<p>
 	
-<script src="/450-test/test_map.js" type="text/javascript"></script>
+<script src="/450/test_map.js" type="text/javascript"></script>
 
