Changed colour of heading

--- a/450/index.html
+++ b/450/index.html
@@ -18,7 +18,7 @@ permalink: /450
 
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
-<h1 class="purple">Food Noon to 6pm</h1>
+<h1 class="orange">Food Noon to 6pm</h1>
 
 <p>Tap each item for more information.</p>
 
