--- a/450/index.html
+++ b/450/index.html
@@ -1,9 +1,8 @@
 ---
-date: 2022-04-27
+date: 2022-04-28
 layout: 450
 permalink: /450
 ---
-<img id="map" src="/450/450_map.jpeg" style="display: none" />
 <img id="hand_right" src="/450/hand_right.png" style="display: none" />
 <img id="hand_right_down" src="/450/hand_right_down.png" style="display: none" />
 <img id="hand_left" src="/450/hand_left.png" style="display: none" />
@@ -15,10 +14,14 @@ permalink: /450
 <h1 class="turquoise">30 April Noon – 6pm</h1>
 
 <p>Residents and friends from around the Hill are invited to join in a day of celebration to mark the 450th anniversary of Harrow School. There’s something for everyone and new events are being added to all the time. This information will be updated regularly up until and including Saturday 30 April.</p>
+<p>You are welcome to come in costume.</p>
 
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
-<h1 class="orange">Food Noon to 6pm</h1>
+<h1 class="orange">Map of the Hill</h1>
+<img id="map" src="/450/450_map.jpg" width=100% height=auto>
+
+<h1 class="purple">Food Noon to 6pm</h1>
 
 <p>Tap each item for more information.</p>
 
@@ -39,6 +42,14 @@ permalink: /450
 <li>1218 Plant Based Cuisine (Vegan Street Food, salad boxes, BBQ and vegan sweet treats)</li>
 <li>Ben’s Bakery (Artisan Cakes)</li>
 </ul></p>
+
+<p>Since we were founded back in 2014, London’s Community Kitchen has become an important part of the communities in and across suburban London.
+Our Ethos of Zero Waste and Zero Hunger is the blueprint to our entire operations, we believe it to be an absolute human right to have access to free or affordable food for the most vulnerable communities across London.</p>
+ 
+<p>London’s Community Kitchen aims to intercept the cycle of food waste by redistributing it to food insecure households. Each week we hold a surplus food market where everyone, regardless of status and without being subjected to any checks, can access surplus food at no cost. As it stands, we feed 10,000 users a week.</p>
+ 
+<p>At its core London’s Community Kitchen is run by the community for the community. We wish to promote cohesion and acceptance, considering this one of our most recent projects involves creating vibrant events for the borough of Harrow to celebrate our community and all that we have achieved together. We work with the most dedicated and charitable people to help ease the suffering of those we work with. Contact us to learn more about what you can do to help and become a part of the change by donating or volunteering today.</p>
+
 <p>🕓 noon – 6pm</p>
 
 <div id="1">
@@ -51,12 +62,10 @@ permalink: /450
 <summary>Free Range Jane</summary>
 <p>Free Range Jane specialises in luxury free-range fried chicken burgers and hand cut chips. We make all our sauces in house and conscientiously source our free-range chicken from a small butcher in Wiltshire. We will be in situ on Grove Hill next to Miriam's Munchies, and will be serving delicious free-range fried chicken all afternoon.</p>
 <p>🕓 noon – 6pm</p>
-
 <div id="2">
 <p>📍 Grove Hill <button onclick="toggleMap('2', 'grove_hill')">Show Map</button></p>
 <canvas style="display: none"></canvas>
 </div>
-
 </details>
 
 <details>
@@ -114,7 +123,7 @@ permalink: /450
 
 <details>
 <summary>Archery</summary>
-<p>John Lyon directed in his will that Archery should be a compulsory part of the curriculum at the school. A competition for the Silver Arrow was held every year until 1771 when it was stopped because of crowd control issues, but the arrow still appears in Harrow School coat of arms. Since the mid-20th century, Archery has been taken up again as part of the sporting curriculum. Every year there is an annual match between Harrow School and The John Lyon School, in which we celebrate our association and membership of the wider Harrow family. To celebrate this unique sport during the Community Events, both schools are putting a historic display/competition where members of the public can enjoy seeing the boys in action shooting compound bows from 10 and 20 yards.</p>
+<p>John Lyon directed in his will that Archery should be a compulsory part of the curriculum at the school. A competition for the Silver Arrow was held every year until 1771 when it was stopped because of crowd control issues, but the arrow still appears in Harrow School coat of arms. Since the mid-20th century, Archery has been taken up again as part of the sporting curriculum. Every year there is an annual match between Harrow School and The John Lyon School, in which we celebrate our association and membership of the wider Harrow family. To celebrate this unique sport during the Community Events, both schools are putting a historic display/competition where members of the public can enjoy seeing the boys in action shooting composite bows from 10 and 20 yards.</p>
 <p>🕓 2pm – 6pm</p>
 <div id="7">
 <p>📍 Bill Yard <button onclick="toggleMap('7', 'bill_yard')">Show Map</button></p>
@@ -129,17 +138,6 @@ permalink: /450
 <p>🕓 2pm – 3pm</p>
 <div id="8">
 <p>📍 Outside Vaughan Library <button onclick="toggleMap('8', 'vaughan')">Show Map</button></p>
-<canvas style="display: none"></canvas>
-</div>
-</details>
-
-<details>
-<summary>Art, Photography and Sculpture Exhibitions</summary>
-<p>Work by local schools and adult art groups</p>
-<p>See here for more information on how to enter the <a href="/450/Photography Competition Poster.pdf">photography competition</a> or the <a href="/450/Harrow Community Art Exhibition.pdf">art exhibition</a>.
-<p>🕓 2pm – 6pm</p>
-<div id="9">
-<p>📍 Pasmore Gallery and Grove Hill <button onclick="toggleMap('9', 'pasmore')">Show Map</button></p>
 <canvas style="display: none"></canvas>
 </div>
 </details>
@@ -321,7 +319,7 @@ permalink: /450
 <summary>Indie Choir</summary>
 <p>Harrow's very own Indie Choir sings a wide range of alternative and contemporary rock and pop songs, from the Beatles to Bowie to Bastille. Launched in September 2017, the choir has performed live at Rickmansworth Festival, Harrow's Heroes, Headstone Manor, and at pubs, bars, venues, and parties in Harrow and Hillingdon.</p>
 <p>Indie Choir meets upstairs at Trinity Bar in central Harrow on Thursday nights, and more details can be found on the web (<a href="https://www.indiechoir.com">indiechoir.com</a>), Facebook (<a href="https://www.facebook.com/indiechoir">@indiechoir</a>) and Instagram (<a href="https://www.instagram.com/indiechoiruk/">@indiechoiruk</a>).</p>
-<p>🕓 2.45pm-3.15pm, 4.15pm-4.45pm, 5.30pm-6pm</p>
+<p>🕓 2.45pm - 3.15pm, 4.30pm – 5pm</p>
 <div id="100">
 <p>📍 Roof Terrace behind Medical Centre <button onclick="toggleMap('100', 'roof_terrace')">Show Map</button></p>
 <canvas style="display: none"></canvas>
@@ -360,8 +358,8 @@ permalink: /450
 
 <details>
 <summary>Maypole Dance</summary>
-<p>Vaughn Primary School</p>
-<p>🕓 2.30pm – 2.45pm, 4.00pm – 4.15pm</p>
+<p>Vaughan Primary School</p>
+<p>🕓 2.30pm – 2.45pm, 3.30pm – 3.45pm</p>
 <div id="101">
 <p>📍 The Old House <button onclick="toggleMap('101', 'old_house')">Show Map</button></p>
 <canvas style="display: none"></canvas>
@@ -415,6 +413,7 @@ permalink: /450
 
 <details>
 <summary>Punch and Judy Show and Magician</summary>
+<p>Matthew Garrett is a full time professional magician and is not only a full Member of The Magic Circle but has also reached the highest degree level within the society - Member of The Inner Magic Circle (Less than 300 magicians worldwide reach this). Matthew is a popular choice for high profile events, weddings, and corporate events. <a href="https://www.professionalmagic.com/">www.professionalmagic.com/</a></p>
 <p>🕓 2pm – 6pm</p>
 <div id="31">
 <p>📍 Outside Bradbys <button onclick="toggleMap('31', 'bradbys')">Show Map</button></p>
@@ -459,6 +458,16 @@ permalink: /450
 <p>🕓 3.15pm, 5.30pm</p>
 <div id="35">
 <p>📍 Roof Terrace behind Medical Centre <button onclick="toggleMap('35', 'roof_terrace')">Show Map</button></p>
+<canvas style="display: none"></canvas>
+</div>
+</details>
+
+<details>
+<summary>Sculpture Exhibition</summary>
+<img src="/450/sculpture_trail.jpeg" width=100% height=auto/>
+<p>🕓 2pm – 6pm</p>
+<div id="9">
+<p>📍 The Grove Front Drive <button onclick="toggleMap('9', 'grove_drive')">Show Map</button></p>
 <canvas style="display: none"></canvas>
 </div>
 </details>
