Corrected missing image

--- a/450/index.html
+++ b/450/index.html
@@ -19,7 +19,7 @@ permalink: /450
 <p><strong>Last updated: {{ page.date | date: "%A %-d %B" }}</strong></p>
 
 <h1 class="orange">Map of the Hill</h1>
-<img id="map" src="/450/450_map.jpg" width=100% height=auto>
+<img id="map" src="/450/450_map.jpeg" width=100% height=auto>
 
 <h1 class="purple">Food Noon to 6pm</h1>
 
