Changed description of yellow zone.

--- a/450/index.html
+++ b/450/index.html
@@ -544,7 +544,7 @@ Our Ethos of Zero Waste and Zero Hunger is the blueprint to our entire operation
 <p>Road closures will be in place on Saturday 30 April from 6am to 8pm.</p>
 <p><ul>
 <li><strong><span style="color:red">Red Zone:</span></strong> Emergency vehicles and stallholders only.</li>
-<li><strong><span style="color:orange">Yellow Zone:</span></strong> Entrance and exit from cul-de-sacs with car pass.</li>
+<li><strong><span style="color:orange">Yellow Zone:</span></strong> Entrance and exit with car pass, no access to red zone.</li>
 <li><strong><span style="color:blue">Blue Zone:</span></strong> Marshalled entry via Middle Road, flow through Byron Hill Road, and exit via London Road for car pass holders all day.</li>
 </ul>
 </p>
