--- a/450-test/index.html
+++ b/450-test/index.html
@@ -18,16 +18,11 @@
   <!-- Import Special CSS -->
   <link rel="stylesheet" href="./index.css">
 
-  <!-- Import Leaflet.js for map-->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
-
   <!-- Import vue-->
   <!-- development version, includes helpful console warnings -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
   <!-- production version, optimized for size and speed -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>-->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 
   <!-- Import Bootstrap 5 stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -91,20 +86,17 @@
 
           <div class="row">
             <div class="col-md-auto">
-              <button type="button" class="btn btn-secondary disabled btn-sm pl-2" data-bs-toggle="modal"
-                :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">
-                🕓 {{event.times}}</button>
+
+              🕓 {{event.times}}
             </div>
             <div class="col-md-auto">
-              <button type="button" class="btn btn-danger btn-sm pl-2" data-bs-toggle="modal"
-                :data-bs-locationid="event.location" :data-bs-target="'#locationModal'+event.location">📍
-                {{locations[event.location].title}}</button>
+              📍 {{locations[event.location].title}}
+
+              <button type="button" class="btn btn-secondary btn-sm pl-2" data-bs-toggle="modal"
+                data-bs-target="#NewlocationModal" :data-bs-locationid="event.location">View Map</button>
+
             </div>
           </div>
-
-
-
-          <!-- Button trigger modal -->
         </details>
 
         <h3 class="orange">Maps</h3>
@@ -200,8 +192,27 @@
 
       </section>
 
-
-      <!-- Modal -->
+      <div class="modal fade" id="NewlocationModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div id="inject">
+              </div>
+              {{state.NewlocationModal}}
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Send message</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- 
       <div v-for="(location, id) in locations" class="modal hide" :id="'locationModal'+id" tabindex="-1"
         aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
@@ -214,7 +225,7 @@
               <div :id="'inject'+id"></div>
               <hr>
 
-              <!-- <h3>On at {{location.title}}</h3>-->
+              <h3>On at {{location.title}}
               <table class="table">
                 <thead>
                   <tr>
@@ -232,13 +243,14 @@
 
                 </tbody>
               </table>
+
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
     </main>
 
 
