--- a/450-test/index.html
+++ b/450-test/index.html
@@ -20,9 +20,9 @@
 
   <!-- Import vue-->
   <!-- development version, includes helpful console warnings -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <!-- production version, optimized for size and speed -->
-  <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> -->
 
   <!-- Import Bootstrap 5 stylesheet -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -34,7 +34,7 @@
 
 </head>
 
-<bodys>
+<body>
 
   <div class="col-lg-5 mx-auto p-3 pt-md-5">
     <header class="d-flex align-items-center pb-3 mb-3">
@@ -197,35 +197,15 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+              <h5 class="modal-title" id="exampleModalLabel">Locate {{state.NewlocationModal.title}}</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
               <div id="inject">
               </div>
-              {{state.NewlocationModal}}
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Send message</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- 
-      <div v-for="(location, id) in locations" class="modal hide" :id="'locationModal'+id" tabindex="-1"
-        aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Locate {{location.title}}</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-            </div>
-            <div class="modal-body">
-              <div :id="'inject'+id"></div>
-              <hr>
 
-              <h3>On at {{location.title}}
+              <!--
+              <h3>On at {{state.NewlocationModal.title}}</h3>
               <table class="table">
                 <thead>
                   <tr>
@@ -235,7 +215,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  <tr div v-for="(event, eventid) in events" v-if="event.location==id">
+                  <tr div v-for="(event, eventid) in events" v-if="event.location==state.NewlocationModal.id">
                     <td>{{event.title}}</td>
                     <td>{{event.times}}</td>
                     <td><a :href="'#event'+eventid" @click="closemodalandopenevent(id,eventid)">Read more</a></td>
@@ -243,14 +223,16 @@
 
                 </tbody>
               </table>
-
+              -->
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-primary">Send message</button>
             </div>
           </div>
         </div>
-      </div> -->
+      </div>
+
     </main>
 
 
@@ -285,7 +267,6 @@
   <!-- Custom Vue stuffs-->
   <script src="./index.js"></script>
 
-
-  </body>
+</body>
 
 </html>
